<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rain.weather.mobile.activity.MainActivity">
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:visible="true"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always" />
    <item android:id="@+id/action_detail"
        android:title="@string/action_detail"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <!--<item android:id="@+id/action_about"-->
        <!--android:title="@string/action_about"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>